# lean-repl-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  quality.yml
examples/: console.py  test.olean
lean_repl_py/: __init__.py  async_handler.py  handler.py
scripts/: install-elan.sh
tests/: conftest.py  test_async.py  test_full.py  test_handler.py  test_tactics.py
